<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/subjectNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subjectNameLesson"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/subjectCodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subjectCodeTextView"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/attendanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendanceTextView"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/attestationStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attestationStatusTextView"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
