<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundScheduleColor"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stud Informer"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textColor="?attr/textColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/schedule"
        android:textColor="@color/white"
        app:backgroundTint="?attr/textButtonHintColor"
        app:cornerRadius="8dp"
        app:icon="@android:drawable/ic_menu_my_calendar"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_moodle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/moodle"
        android:textColor="@color/white"
        app:backgroundTint="?attr/textButtonHintColor"
        app:cornerRadius="8dp"
        app:icon="@android:drawable/ic_menu_share"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_performance" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_export"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/main_export"
        android:textColor="@color/white"
        app:backgroundTint="?attr/textButtonHintColor"
        app:cornerRadius="8dp"
        app:icon="@android:drawable/ic_menu_upload"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_moodle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_favorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/favorites_management"
        android:textColor="@color/white"
        app:backgroundTint="?attr/textButtonHintColor"
        app:cornerRadius="8dp"
        app:icon="@android:drawable/btn_star_big_on"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_export" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_performance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/performance"
        android:textColor="@color/white"
        app:backgroundTint="?attr/textButtonHintColor"
        app:cornerRadius="8dp"
        app:icon="@android:drawable/ic_menu_info_details"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_schedule" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/theme_switch"
        android:textColor="?attr/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_favorites"
        app:thumbTint="?attr/textButtonHintColor"
        app:trackTint="?attr/textHintColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>